Fix position -> products__wrap--brunette

--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -84,7 +84,7 @@
 
   .products__wrap--brunette {
     width: 380px;
-    transform: translateX(220px);
+    transform: translateX(320px);
   }
 
   .products__list--brunette {
